--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
